# pillar

./: .arcconfig  .gitignore  LICENSE.txt  README.md  backup-db.sh  deploy.sh  gulp  gulpfile.js  jest.config.js  package-lock.json  package.json  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  restore-db.sh  setup.cfg  setup.py  translations.cfg
attract/: attract.py  config.py.example  config.py.example.py  init_bd.py  manage.py  settings.py  test_attract.py
attract/application/: __init__.py  file_server.py  pre_hooks.py
devdeps/: pyproject.toml
docker/: Dockerfile  build.sh
docker/attract/: Dockerfile
docker/attract-db/: Dockerfile
docker/dev/: Dockerfile  runserver.sh
docker/pro/: 000-default.conf  Dockerfile
old-src/: manage.py
pillar/: __init__.py  attrs_extra.py  badge_sync.py  bugsnag_extra.py  cli.py  config.py  config.py.example  extension.py  flask_extra.py  manage.py  markdown.py  runserver.wsgi  sdk.py  sentry_extra.py  settings.py  shortcodes.py  test_attract.py
pillar/api/: __init__.py  activities.py  blender_id.py  custom_field_validation.py  encoding.py  eve_settings.py  file_storage.py  latest.py  local_auth.py  patch_handler.py  service.py  timeline.py
pillar/application/: __init__.py  file_server.py  pre_hooks.py  utils.py
pillar/auth/: __init__.py  cors.py  oauth.py  subscriptions.py
pillar/celery/: __init__.py  algolia_indexing.py  algolia_tasks.py  avatar.py  badges.py  celery_cfg.py  email_tasks.py  file_link_tasks.py  search_index_tasks.py  tasks.py
pillar/cli/: __init__.py  badges.py  celery.py  elastic.py  maintenance.py  operations.py  setup.py  translations.py
pillar/tests/: __init__.py  common_test_data.py  config_testing.py  eve_test_settings.py  test_auth.py
pillar/web/: __init__.py  jinja.py  static.py  staticfile.py  subquery.py  system_util.py
src/scripts/: algolia_search.js  elasticsearch.js  file_upload.js  project-edit.js  video_plugins.js  vrview-analytics.js
src/styles/: _apps_base.sass  _base.sass  _comments.sass  _config.sass  _error.sass  _font-pillar.sass  _homepage.sass  _join.sass  _notifications.sass  _notifications_toastr.sass  _organizations.sass  _pages.sass  _project-dashboard.sass  _project-sharing.sass  _project.sass  _search.sass  _services.sass  _stats.sass  _user.sass  _utils.sass  _welcome.sass  base.sass  blog.sass  font-pillar.sass  main.sass  project-main.sass  theatre.sass  vrview.sass
src/templates/: _modal.jade  _modal.pug  _notifications.jade  homepage.jade  homepage.pug  join.jade  join_agent.jade  join_agent.pug  layout.jade  layout.pug  login.jade  login.pug  services.jade  stats.pug  upload.jade  upload_embed.jade  vrview.jade  vrview.pug
tests/: common_test_class.py  common_test_data.py  common_test_settings.py  common_test_stuff.py  config_testing.py  test_auth.py  test_badge_sync.py  test_bcloud_home_project.py  test_blender_id_subclient.py  test_data.py  test_encoding.py  test_file_caching.py  test_file_storage.py  test_flask_extra.py  test_home_project.py  test_link_refresh.py  test_local_auth.py  test_nodes.py  test_orphan_files.py  test_patch.py  test_project_management.py  test_sdk.py  test_service_badger.py  test_settings.py  test_shortcodes.py  test_user_capabilities.py  test_utils.py
tests/test_api/: test_auth.py  test_bcloud_home_project.py  test_blender_id_subclient.py  test_cerberus.py  test_cli.py  test_comments.py  test_encoding.py  test_file_caching.py  test_file_storage.py  test_file_storage_backends.py  test_file_storage_moving.py  test_imaging.py  test_latest.py  test_link_refresh.py  test_nodes.py  (+23 more)
(+473 files in other folders)
