[tool.poetry]
name = "pillar"
version = "2.0"
description = ""
authors = [
    "Francesco Siddi <francesco@blender.org>",
    "Pablo Vazquez <pablo@blender.studio>",
    "Sybren Stüvel <sybren@blender.studio>",
]


[tool.poetry.scripts]
# Must be run after installing/updating:
translations = 'pillar.cli.translations:main'


[tool.poetry.dependencies]
python = "~3.6"
attrs = "18.2.0"
algoliasearch = "1.12.0"
bcrypt = "3.1.3"
blinker = "1.4"
bleach = "2.1.3"
celery = {version = "=4.2.1",extras = ["redis"]}
CommonMark = "0.7.2"
elasticsearch = "6.1.1"
elasticsearch-dsl = "6.1.0"
Eve = "0.8"
Flask = "1.0.2"
Flask-Babel = "0.11.2"
Flask-Caching = "1.4.0"
Flask-DebugToolbar = "0.10.1"
Flask-Script = "2.0.6"
Flask-Login = "0.4.1"
Flask-WTF = "0.14.2"
gcloud = "0.12.0"
google-apitools = "0.4.11"
httplib2 = "0.9.2"
IPy = "0.83"
MarkupSafe = "0.23"
ndg-httpsclient = "0.4.0"
Pillow = "4.1.1"
python-dateutil = "2.5.3"
rauth = "0.7.3"
raven = {version = "=6.3.0",extras = ["flask"]}
redis = "2.10.5"
shortcodes = "2.5.0"
WebOb = "1.5.0"
wheel = "0.29.0"
zencoder = "0.6.5"
pillarsdk = {path = "../pillar-python-sdk"}

# Version pins for secondary requirements
kombu = "~4.2"

# Secondary requirements that weren't installed automatically:
idna = "~2.8"


[tool.poetry.dev-dependencies]
pillar-devdeps = {path = "./devdeps"}


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
